2002-05-20  Bruno Haible  <bruno@clisp.org>

	Remove gcc-3.0.4 warning.
	* eval.d (LD, LR): Don't use CONCAT to paste strings; justaposing the
	strings is sufficient.

2002-05-19  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK_register) [S390]: adjusted 2002-03-24 patch
	to use the register on GCC-3.1 or better

2002-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (stdbool.h): sed RE depends on TOS: not all systems
	use autoconf [actually, it is not clear that it is legitimate to
	expect a non-UNIX system to have sed; cygwin is ubiquitous though,
	so win32 is, hopefully, covered]

2002-05-18  Arseny Slobodjuck  <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	graceful disconnect and interruptible wait in win32
	* stream.d (low_close_socket) [WIN32_NATIVE]: do not shutdown
	a socket: shutdown does not respect the linger option.
	To use shutdown for graceful disconnect, one should implement
	a kind of protocol, i.e. shutdown SEND and wait for client
	acknowledgment (client should support that protocol).
	(SOCKET-WAIT) [WIN32_NATIVE]: use interruptible_wait()
	(SOCKET-STREAM-SHUTDOWN): explicitly cast handle to stream
	* socket.d (lingerize_socket): new function: set SO_LINGER to 30sec
	(bindlisten_via_ip, connect_via_ip) [WIN32_NATIVE]: use it
	* spvw.d (main) [WIN32_NATIVE]: call done_win32() to finalize sockets
	* win32.d (done_win32, interruptible_wait): declare new functions
	* win32aux.d (done_win32): new function: finalizes socket library
	(do_wait): new thread function for DoInterruptible
	(interruptible_wait): new global function

2002-05-18  Sam Steingold  <sds@gnu.org>

	kill src/gettext; POs are now in src/po
	* Makefile.devel (SOURCES3, CONFIGURES, configures, potfiles):
	removed gettext/*
	(src--distrib): do create a PO tar
	* configure: removed gettext, replaced gettext/po with po
	* configure.in (ALL_LINGUAS, po/Makefile.in): moved here from
	gettext/configure.in
	* makemake.in: removed gettext, replaced gettext/po with po