@@ -1,3 +1,7 @@
+2002-05-20  Bruno Haible  <bruno@clisp.org>
+
+	* strings.tst: Test checking of validity of CHAR index.
+
 2002-04-22  Sam Steingold  <sds@gnu.org>
 
 	* macro8.tst: test 3.2.2.1 Compiler Macros
